# Blockchain-Security-Audit-and-Threat-Mitigation-Framework

./: .gitignore  Cargo.toml  LICENSE  README.md  hardhat.config.js  package.json  render.yaml
Audits/smart-contracts/: Report.md
dashboard/: server.js
dashboard/public/: app.js  index.html  style.css
docs/best-practices/: secure-coding.md  smart_contract_security.md
docs/case-studies/: real-world-attacks.md
incident-response/: incidentHandler.js
incident-response/logs/: 0xab3d09a1.json  attack.json  incident-log.json
monitoring/: crossChainMonitor.js  flashLoanMonitor.js  nodeSecurityMonitor.sh  onChainMonitor.js  reentrancyMonitor.js
scripts/: audit.js  automatedAudit.js  deploySecureContract.js  rpcPenTest.sh
src/interoperability/: InsecureBridge.sol  SecureBridge.sol
src/network/: security.sh
src/secure-smart-contracts/: IntegerOverflow.sol  SecureTemplate.sol  Vulnerable.sol  VulnerableLending.sol
src/smart-contracts/: Secure.sol  Vulnerable.sol
src/vulnerable-smart-contracts/: FlashLoanBorrower.sol  IntegerOverflow.sol  ReentrancyAttacker.sol  Secure.sol  Vulnerable.sol  VulnerableLending.sol
test/: crossChainBridge.test.js  crossChainReplayAttack.js  flashLoan.test.js  flashLoanAttack.js  integerOverflow.js  integerOverflow.test.js  reentrancy.test.js  reentrancyAttack.js  testVulnerable.js
tools/chainalysis/: compliance.py  transactions.json
tools/slither/: slither.config.json
